version 2.2.0
- POCO is now using DynamicMethod instead of Reflection
- support for IDeserializationCallback
- fix failure on connection on IO errors
- merge "Cassandra-Sharp write performance Vs Thrift Client" from hjarraya

version 2.1.2
- fixed issue 9 (https://github.com/pchalamet/cassandra-sharp/issues/9)
- read again asap if buffering mode 
- fixd invalid utf8 string len when using char >= 0x80
- prepared statements can recover from connection failure
- fixed issue 8 (https://github.com/pchalamet/cassandra-sharp/issues/8)
- fixed issue 10 (https://github.com/pchalamet/cassandra-sharp/issues/10)
- fixed issue 11 (https://github.com/pchalamet/cassandra-sharp/issues/11)

version 2.1.1
- fixed issue 5 (https://github.com/pchalamet/cassandra-sharp/issues/5

version 2.1.0.0
- node discovery implementation
- fixed guid serialization
- dynamic column width
- fixed eventually incorrect order of column in cqlplus
- fixed connection recovery (OnFailure event)
- use object (supporting anonyous type) instead of object[] for prepared statement
- one less tpl task per request & waiting is done via tpl

version 2.0.7.0
- mono compatibility (for cqlplus)
- support for port in cqlplus

version 2.0.6.0 (beta)
- renamed cqlsh to cqlplus to avoid confusion
- cqlplus changes:
  changed cqlplus help system
  added source & exec
  support for enum for cqlplus command args
  fix source when error encountered

version 2.0.5.0 (beta)
- refactoring of cqlsh grammar - no modification required to add new commands
- generic help based on registered commands

version 2.0.4.0 (beta)
- change cqlsh value formatting
- fixed map/set/list bin reader
- ExecuteNonQuery for prepared statement
- cqlsh debug logger
- commands handling refactoring
- login/password for cqlsh

version 2.0.3.0 (beta)
- support for list, set, map
- fixed null byte array
- support for streaming directly from socket (default) or from memory stream
- tabular display in cqlsh